--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,8 @@
     <blockquote>
         <h2>What's the difference of local storage & session storage?</h2>
         <p>SessionStorage is similar to localStorage ; the difference is that while data in localStorage doesn't expire, data in sessionStorage is cleared when the page session ends. Whenever a document is loaded in a particular tab in the browser, a unique page session gets created and assigned to that particular tab.</p>
+        <h2>What's the difference of global scope & local scope?</h2>
+        <p>In a browser environment, the global scope is controlled by the window object while in Node. js, it's controlled by the global object. Block scopes are what you get when you use if statements, for statements, and the like.</p>
   
     </blockquote>
     <script src="./script.js"></script>
