--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Speed Monster</title>
+    <title>Speed Type Monster</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +23,8 @@
       <div id="display" class="inactive"></div>
 
       <div class="buttons">
-        <button id="start">START</button>
+        <button id="starts">START</button><br><br>
+        <a class="btn" href="blog.html">Blog</a>
       </div>
 
       <div class="divider-container">
@@ -33,11 +34,9 @@
       </div>
       <div id="histories"></div>
     </div>
-
     <div id="countdown"></div>
     <div id="modal-background" class="hidden"></div>
     <div id="result" class="hidden"></div>
-
     <script src="./history.js"></script>
     <script src="./script.js"></script>
   </body>
