--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ t<!DOCTYPE html>
       <div id="display" class="inactive"></div>
 
       <div class="buttons">
-        <button id="starts">START</button><br><br>
-        <a class="btn" href="blog.html">Blog</a>
+        <button id="starts" class="">START</button><br><br>
+        <button><a class="btn" href="blog.html">Blog</a></button>
       </div>
 
       <div class="divider-container">
